feat(arch): modernize build to Java 17, fix Hibernate antipatterns and add test suites
- Upgrade build target to Java 17 and configure Surefire/Resources plugins
- Integrate OpenRewrite maven plugin for automated code modernization
- Parameterize HQL queries in ICImageLifeCycle, UsersLifeCycle, HigherTaxonLifeCycle
- Implement equals() and hashCode() across persistent entities (Specimen, LatLong, Collector, etc.)
- Fix String reference comparison and null safety bugs
- Fix copyPasteActivated static evaluation bug in SpecimenDetailsViewPane
- Fix DDL column default value syntax in HBM XML mappings
- Update README with Flyway database migration and H2 test instructions
- Add unit and integration tests for HigherTaxon, Users, Specimen, and LatLong